--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <!-- Audio Element -->
     <audio id="bg-music" loop preload="auto">
-        <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-2.mp3" type="audio/mpeg">
+        <source src="Images/best.mp3" type="audio/mpeg">
     </audio>
 
     <!-- ===== SECTION 1: WELCOME ===== -->
@@ -121,12 +121,12 @@
                         <h3 class="map-title">Location Map</h3>
                         <div class="map-wrapper">
                             <iframe
-                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14024.832962498988!2d77.21059!3d28.50873!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce18e5e1c5c4d%3A0x6c7b3e9e5f1a1b2c!2sSainik+Farm%2C+New+Delhi%2C+Delhi!5e0!3m2!1sen!2sin!4v1700000000000"
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3506.3793278826706!2d77.21573117528389!3d28.498232975738368!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce11dae08b0d9%3A0xe2fd4cb2cc95f7fd!2sRadhe%20Garden!5e0!3m2!1sen!2sin!4v1771309474366!5m2!1sen!2sin"
                                 width="100%" height="300" style="border:0; border-radius: 12px;" allowfullscreen=""
                                 loading="lazy" referrerpolicy="no-referrer-when-downgrade">
                             </iframe>
                         </div>
-                        <a href="https://goo.gl/maps/YOUR_LINK_HERE" target="_blank" class="glow-btn map-btn"
+                        <a href="https://www.google.com/maps/place/Radhe+Garden/@28.498233,77.2157312,17z/data=!3m1!4b1!4m6!3m5!1s0x390ce11dae08b0d9:0xe2fd4cb2cc95f7fd!8m2!3d28.498233!4d77.2183061!16s%2Fg%2F11tf40w5dz?entry=ttu&g_ep=EgoyMDI2MDIxMS4wIKXMDSoASAFQAw%3D%3D" target="_blank" class="glow-btn map-btn"
                             style="margin-top: 15px; display: inline-block; padding: 10px 30px; font-size: 0.9rem;">Open
                             in Maps</a>
                     </div>
@@ -258,6 +258,9 @@
         <a href="#countdown-rsvp" class="nav-dot" data-section="countdown-rsvp" aria-label="Countdown & RSVP"></a>
         <a href="#qr-ending" class="nav-dot" data-section="qr-ending" aria-label="QR & Ending"></a>
     </nav>
+
+    <!-- Custom Cursor Element -->
+    <div class="custom-cursor"></div>
 
     <!-- QR Code Library -->
     <script src="https://cdn.jsdelivr.net/npm/qrcodejs@1.0.0/qrcode.min.js"></script>
