--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Great+Vibes&family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500&family=Cinzel:wght@400;500;600;700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
@@ -37,7 +37,7 @@
 
     <!-- Audio Element -->
     <audio id="bg-music" loop preload="auto">
-        <source src="Images/best.mp3" type="audio/mpeg">
+        <source src="/Images/best.mp3" type="audio/mpeg">
     </audio>
 
     <!-- ===== SECTION 1: WELCOME ===== -->
@@ -45,12 +45,12 @@
         <div class="overlay"></div>
         <div class="content welcome-content">
             <div class="ganesh-container">
-                <img src="Images/Buppa.png" alt="Shree Ganesh" class="ganesh-img glow-animation">
+                <img src="/Images/Buppa.png" alt="Shree Ganesh" class="ganesh-img glow-animation">
             </div>
             <!-- <p class="subtitle-script">Shree Ganeshaya Namah</p> -->
-            <img src="Images/Buppa N.png" alt="Shree Ganesh Text" class="ganesh-img-text">
+            <img src="/Images/Buppa N.png" alt="Shree Ganesh Text" class="ganesh-img-text">
             <div class="ornament-divider">
-                <img src="Images/leaf w.png" alt="divider" class="divider-img">
+                <img src="/Images/leaf w.png" alt="divider" class="divider-img">
             </div>
             <p class="welcome-text cinzel">Together with their families</p>
             <p class="welcome-subtext">request the honour of your presence at the marriage celebration of</p>
@@ -67,14 +67,14 @@
             <!-- Left Column: Image -->
             <div class="couple-image-col fade-in">
                 <div class="couple-img-wrapper">
-                    <img src="Images/couple.png" alt="Ashish & Sapna" class="couple-photo">
+                    <img src="/Images/couple.png" alt="Ashish & Sapna" class="couple-photo">
                 </div>
             </div>
 
             <!-- Right Column: Content -->
             <div class="couple-content-col">
                 <div class="mandala-bg">
-                    <img src="Images/patch.png" alt="mandala" class="mandala-img">
+                    <img src="/Images/patch.png" alt="mandala" class="mandala-img">
                 </div>
                 <div class="names-container fade-in">
                     <h1 class="groom-name name-reveal">Ashish Kumar</h1>
@@ -82,7 +82,7 @@
                     <h1 class="bride-name name-reveal">Sapna Kashyap</h1>
                 </div>
                 <div class="ornament-divider fade-in">
-                    <img src="Images/leaf w.png" alt="divider" class="divider-img">
+                    <img src="/Images/leaf w.png" alt="divider" class="divider-img">
                 </div>
                 <p class="couple-tagline fade-in">are getting married!</p>
             </div>
@@ -94,7 +94,7 @@
         <div class="content fade-in">
             <h2 class="section-title cinzel">Wedding Ceremony & Venue</h2>
             <div class="ornament-divider-small">
-                <img src="Images/leaf w.png" alt="divider" class="divider-img-small">
+                <img src="/Images/leaf w.png" alt="divider" class="divider-img-small">
             </div>
 
             <div class="wedding-map-container">
@@ -126,7 +126,8 @@
                                 loading="lazy" referrerpolicy="no-referrer-when-downgrade">
                             </iframe>
                         </div>
-                        <a href="https://www.google.com/maps/place/Radhe+Garden/@28.498233,77.2157312,17z/data=!3m1!4b1!4m6!3m5!1s0x390ce11dae08b0d9:0xe2fd4cb2cc95f7fd!8m2!3d28.498233!4d77.2183061!16s%2Fg%2F11tf40w5dz?entry=ttu&g_ep=EgoyMDI2MDIxMS4wIKXMDSoASAFQAw%3D%3D" target="_blank" class="glow-btn map-btn"
+                        <a href="https://www.google.com/maps/place/Radhe+Garden/@28.498233,77.2157312,17z/data=!3m1!4b1!4m6!3m5!1s0x390ce11dae08b0d9:0xe2fd4cb2cc95f7fd!8m2!3d28.498233!4d77.2183061!16s%2Fg%2F11tf40w5dz?entry=ttu&g_ep=EgoyMDI2MDIxMS4wIKXMDSoASAFQAw%3D%3D"
+                            target="_blank" class="glow-btn map-btn"
                             style="margin-top: 15px; display: inline-block; padding: 10px 30px; font-size: 0.9rem;">Open
                             in Maps</a>
                     </div>
@@ -140,7 +141,7 @@
         <div class="content fade-in">
             <h2 class="section-title cinzel">Celebrate With Us</h2>
             <div class="ornament-divider-small">
-                <img src="Images/leaf w.png" alt="divider" class="divider-img-small">
+                <img src="/Images/leaf w.png" alt="divider" class="divider-img-small">
             </div>
 
             <div class="countdown-rsvp-container">
@@ -223,7 +224,7 @@
                 <div class="qr-col">
                     <h2 class="section-title cinzel">Share Invitation</h2>
                     <div class="ornament-divider-small">
-                        <img src="Images/leaf w.png" alt="divider" class="divider-img-small">
+                        <img src="/Images/leaf w.png" alt="divider" class="divider-img-small">
                     </div>
                     <p class="qr-subtitle">Scan to share with loved ones</p>
                     <div class="qr-container">
@@ -234,14 +235,14 @@
                 <!-- Right Column: Ending Message -->
                 <div class="ending-col">
                     <div class="ganesh-container small">
-                        <img src="Images/Buppa.png" alt="Shree Ganesh" class="ganesh-img-small glow-animation">
+                        <img src="/Images/Buppa.png" alt="Shree Ganesh" class="ganesh-img-small glow-animation">
                     </div>
                     <div class="ornament-divider">
-                        <img src="Images/leaf w.png" alt="divider" class="divider-img">
+                        <img src="/Images/leaf w.png" alt="divider" class="divider-img">
                     </div>
                     <h2 class="ending-message">"Your presence will bless the occasion"</h2>
                     <div class="ornament-divider">
-                        <img src="Images/leaf w.png" alt="divider" class="divider-img">
+                        <img src="/Images/leaf w.png" alt="divider" class="divider-img">
                     </div>
                     <p class="ending-names">Ashish & Sapna</p>
                     <p class="ending-date">10 . 03 . 2026</p>
@@ -264,7 +265,7 @@
 
     <!-- QR Code Library -->
     <script src="https://cdn.jsdelivr.net/npm/qrcodejs@1.0.0/qrcode.min.js"></script>
-    <script src="./script.js"></script>
+    <script type="module" src="/script.js"></script>
 </body>
 
 </html>
