--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="https://public-frontend-cos.metadl.com/mgx/img/favicon_atoms.ico" type="image/x-icon">
+    <link rel="icon" href="/public/Images/couple1.png" type="image/x-icon">
     <title>Ashish & Sapna | Wedding Invitation</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -34,6 +34,7 @@
             <line x1="1" y1="1" x2="23" y2="23" stroke-width="3" />
         </svg>
     </button>
+    <div id="music-prompt" class="music-prompt">Tap to play music 🎵</div>
 
     <!-- Audio Element -->
     <audio id="bg-music" loop preload="auto">
